Fix crash when opening user profile from group